# dump1090-server

./: Cargo.toml  Dockerfile  README-dump1090-json.md  README.md  build.rs
proto/: aircraft.proto
src/: lib.rs  main.rs
src/proto/: mod.rs
src/wasm/: mod.rs
test-data/: aircraft.json  history_0.json  history_1.json  history_10.json  history_100.json  history_101.json  history_102.json  history_103.json  history_104.json  history_105.json  history_106.json  history_107.json  history_108.json  history_109.json  history_11.json  history_110.json  history_111.json  history_112.json  history_113.json  history_114.json  history_115.json  history_116.json  history_117.json  history_118.json  history_119.json  history_12.json  history_13.json  history_14.json  history_15.json  history_16.json  history_17.json  history_18.json  history_19.json  history_2.json  history_20.json  history_21.json  history_22.json  history_23.json  history_24.json  history_25.json  (+83 more)
